--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint:watch": "esw -w src/**",
     "review": "npm run lint && npm test",
     "start": "npm run build && NODE_ENV=production node server.js",
-    "test":"jest src/**",
+    "test": "jest src/**",
     "test:watch": "jest src/** --watch",
     "test:watchAll": "jest src/** --watchAll",
     "test:coverage:report": "open coverage/lcov-report/index.html"
@@ -18,6 +18,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@material-ui/core": "^1.4.2",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-polyfill": "^6.26.0",
@@ -32,9 +33,11 @@
     "raf": "^3.3.2",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
+    "react-router-dom": "^4.3.1",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
-    "webpack": "^3.6.0"
+    "webpack": "^3.6.0",
+    "zoid": "^6.0.65"
   },
   "devDependencies": {
     "babel-eslint": "^8.0.1",
